@@ -22,6 +22,8 @@ pycdf
    change to pycdf internals in several years; please report any bugs.
  - Fix TT2000-to-EPOCH16 conversions crashing in very rare cases.
  - Minimize setting/unsetting readonly mode, as this can be very slow.
+ - Update for API changes in CDF library 3.7.1 (compatibility maintained
+   with earlier versions)
 
 Changes in Version 0.1.6 (2016-09-08)
 =====================================
